アクティブプロジェクト表示を追加し README 更新処理に統合
- 新規: modules/active-projects.ts を追加
  - GitHub API からユーザーのリポジトリを取得し、過去7日間に更新のあったリポジトリを抽出
  - 各リポジトリのコミット数を取得して合計に対する割合を示すSVGチャート（Data URL）や言語アイコン、最終プッシュの相対時間、stars を含むMarkdownテーブルを生成
- update-readme.ts を修正
  - activeProjects を呼び出して README の <!-- active-projects --> セクションを更新するように統合
  - README の更新処理を若干整理（let/readme、ログ出力の改善）
- CI ワークフロー (.github/workflows/update-readme.yml) を微修正
  - ジョブのインデント整備と、Update README ステップで GH_PAT を環境変数として渡すように追加
- 新規: config/github.ts を追加して GitHub ユーザー名を集中管理
- .gitignore に .env を追加
- README.md をアクティブプロジェクト表示のサンプルで更新

（エラー時のフォールバックや安全なヘッダ設定を含む実装）

--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -1,38 +1,40 @@
 name: Update Profile README
 
 on:
-    schedule:
-        - cron: "0 0 * * *"
-    workflow_dispatch:
+  schedule:
+    - cron: "0 0 * * *"
+  workflow_dispatch:
 
 jobs:
-    update:
-        runs-on: ubuntu-latest
+  update:
+    runs-on: ubuntu-latest
 
-        steps:
-            - name: Checkout repository
-              uses: actions/checkout@v4
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-            - name: Setup Node.js
-              uses: actions/setup-node@v4
-              with:
-                  node-version: "20"
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
 
-            - name: Install dependencies
-              run: npm install
+      - name: Install dependencies
+        run: npm install
 
-            - name: Create data directory
-              run: mkdir -p data
+      - name: Create data directory
+        run: mkdir -p data
 
-            - name: Update README
-              run: npm run update
+      - name: Update README
+        run: npm run update
+        env:
+          GH_PAT: ${{ secrets.GITHUB_TOKEN }}
 
-            - name: Commit and push if changed
-              run: |
-                  git config user.name "github-actions[bot]"
-                  git config user.email "github-actions[bot]@users.noreply.github.com"
-                  git add README.md data/stats-history.json
-                  git diff --quiet && git diff --staged --quiet || (
-                    git commit -m "🤖 Update npm stats"
-                    git push
-                  )
+      - name: Commit and push if changed
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add README.md data/stats-history.json
+          git diff --quiet && git diff --staged --quiet || (
+            git commit -m "🤖 Update npm stats"
+            git push
+          )
