--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -33,7 +33,7 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add README.md data/stats-history.json
+          git add README.md data/stats-history.json data/vscode-stats-history.json
           git diff --quiet && git diff --staged --quiet || (
             git commit -m "🤖 Update npm stats"
             git push
