--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -28,6 +28,7 @@ jobs:
         run: npm run update
         env:
           GH_PAT: ${{ secrets.GITHUB_TOKEN }}
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
 
       - name: Commit and push if changed
         run: |
